--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -149,11 +149,11 @@
     <Compile Include="People\Controls\ctrlPersonCardWithFilter.Designer.cs">
       <DependentUpon>ctrlPersonCardWithFilter.cs</DependentUpon>
     </Compile>
-    <Compile Include="Detain License.cs">
+    <Compile Include="Licences\Detain License\frmDetainLicense.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Detain License.Designer.cs">
-      <DependentUpon>Detain License.cs</DependentUpon>
+    <Compile Include="Licences\Detain License\frmDetainLicense.Designer.cs">
+      <DependentUpon>frmDetainLicense.cs</DependentUpon>
     </Compile>
     <Compile Include="Global Classes\clsFormat.cs" />
     <Compile Include="Global Classes\clsGlobal.cs" />
@@ -207,11 +207,11 @@
     <Compile Include="People\frmFindPerson.Designer.cs">
       <DependentUpon>frmFindPerson.cs</DependentUpon>
     </Compile>
-    <Compile Include="ReleaseDetainedLicense.cs">
+    <Compile Include="Applications\Release Detain License\frmReleaseDetainedLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReleaseDetainedLicense.Designer.cs">
-      <DependentUpon>ReleaseDetainedLicense.cs</DependentUpon>
+    <Compile Include="Applications\Release Detain License\frmReleaseDetainedLicenseApplication.Designer.cs">
+      <DependentUpon>frmReleaseDetainedLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="Applications\RenewLocalDrivingLicense\frmRenewLocalDrivingLicense.cs">
       <SubType>Form</SubType>
@@ -368,8 +368,8 @@
     <EmbeddedResource Include="Users\Controls\ctrlUserCard.resx">
       <DependentUpon>ctrlUserCard.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Detain License.resx">
-      <DependentUpon>Detain License.cs</DependentUpon>
+    <EmbeddedResource Include="Licences\Detain License\frmDetainLicense.resx">
+      <DependentUpon>frmDetainLicense.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmShowInternationalLicencesInfo.resx">
       <DependentUpon>frmShowInternationalLicencesInfo.cs</DependentUpon>
@@ -427,8 +427,8 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="ReleaseDetainedLicense.resx">
-      <DependentUpon>ReleaseDetainedLicense.cs</DependentUpon>
+    <EmbeddedResource Include="Applications\Release Detain License\frmReleaseDetainedLicenseApplication.resx">
+      <DependentUpon>frmReleaseDetainedLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\RenewLocalDrivingLicense\frmRenewLocalDrivingLicense.resx">
       <DependentUpon>frmRenewLocalDrivingLicense.cs</DependentUpon>
