This is the last update for the project solution

--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Applications\Controls\ctrlApplicationBasicInfo.Designer.cs">
       <DependentUpon>ctrlApplicationBasicInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="Applications\International License\frmNewInternationalLicenseApplication.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Applications\International License\frmNewInternationalLicenseApplication.Designer.cs">
+      <DependentUpon>frmNewInternationalLicenseApplication.cs</DependentUpon>
+    </Compile>
     <Compile Include="Applications\LocalDrivingLicense\frmLocalDrivingApplicationInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,10 +125,10 @@
     <Compile Include="Licences\Local Licenses\Controls\ctrlDriverLicenseInfoWithFilter.Designer.cs">
       <DependentUpon>ctrlDriverLicenseInfoWithFilter.cs</DependentUpon>
     </Compile>
-    <Compile Include="ctrlInternationalLicenseInfo.cs">
+    <Compile Include="Licences\International License\Controls\ctrlInternationalLicenseInfo.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ctrlInternationalLicenseInfo.Designer.cs">
+    <Compile Include="Licences\International License\Controls\ctrlInternationalLicenseInfo.Designer.cs">
       <DependentUpon>ctrlInternationalLicenseInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Licences\Local Licenses\Controls\ctrlDriverLicenseInfo.cs">
@@ -159,10 +165,10 @@
     <Compile Include="Global Classes\clsGlobal.cs" />
     <Compile Include="Global Classes\clsUtil.cs" />
     <Compile Include="Global Classes\clsValidation.cs" />
-    <Compile Include="frmShowInternationalLicencesInfo.cs">
+    <Compile Include="Licences\International License\frmShowInternationalLicencesInfo.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmShowInternationalLicencesInfo.Designer.cs">
+    <Compile Include="Licences\International License\frmShowInternationalLicencesInfo.Designer.cs">
       <DependentUpon>frmShowInternationalLicencesInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="Licences\Local Licenses\frmIssueDriverLicenseForFirstTime.cs">
@@ -189,17 +195,11 @@
     <Compile Include="Drivers\frmListDrivers.Designer.cs">
       <DependentUpon>frmListDrivers.cs</DependentUpon>
     </Compile>
-    <Compile Include="ListInternationalDrivingLicenseApplication.cs">
+    <Compile Include="Applications\International License\frmListInternationalDrivingLicenseApplication.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ListInternationalDrivingLicenseApplication.Designer.cs">
-      <DependentUpon>ListInternationalDrivingLicenseApplication.cs</DependentUpon>
-    </Compile>
-    <Compile Include="New International License Application.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="New International License Application.Designer.cs">
-      <DependentUpon>New International License Application.cs</DependentUpon>
+    <Compile Include="Applications\International License\frmListInternationalDrivingLicenseApplication.Designer.cs">
+      <DependentUpon>frmListInternationalDrivingLicenseApplication.cs</DependentUpon>
     </Compile>
     <Compile Include="People\frmFindPerson.cs">
       <SubType>Form</SubType>
@@ -320,6 +320,9 @@
     <EmbeddedResource Include="Applications\Controls\ctrlApplicationBasicInfo.resx">
       <DependentUpon>ctrlApplicationBasicInfo.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Applications\International License\frmNewInternationalLicenseApplication.resx">
+      <DependentUpon>frmNewInternationalLicenseApplication.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Applications\LocalDrivingLicense\frmLocalDrivingApplicationInfo.resx">
       <DependentUpon>frmLocalDrivingApplicationInfo.cs</DependentUpon>
     </EmbeddedResource>
@@ -350,7 +353,7 @@
     <EmbeddedResource Include="Licences\Local Licenses\Controls\ctrlDriverLicenseInfoWithFilter.resx">
       <DependentUpon>ctrlDriverLicenseInfoWithFilter.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ctrlInternationalLicenseInfo.resx">
+    <EmbeddedResource Include="Licences\International License\Controls\ctrlInternationalLicenseInfo.resx">
       <DependentUpon>ctrlInternationalLicenseInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Licences\Local Licenses\Controls\ctrlDriverLicenseInfo.resx">
@@ -371,7 +374,7 @@
     <EmbeddedResource Include="Licences\Detain License\frmDetainLicense.resx">
       <DependentUpon>frmDetainLicense.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frmShowInternationalLicencesInfo.resx">
+    <EmbeddedResource Include="Licences\International License\frmShowInternationalLicencesInfo.resx">
       <DependentUpon>frmShowInternationalLicencesInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Licences\Local Licenses\frmIssueDriverLicenseForFirstTime.resx">
@@ -386,8 +389,8 @@
     <EmbeddedResource Include="Drivers\frmListDrivers.resx">
       <DependentUpon>frmListDrivers.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ListInternationalDrivingLicenseApplication.resx">
-      <DependentUpon>ListInternationalDrivingLicenseApplication.cs</DependentUpon>
+    <EmbeddedResource Include="Applications\International License\frmListInternationalDrivingLicenseApplication.resx">
+      <DependentUpon>frmListInternationalDrivingLicenseApplication.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\LocalDrivingLicense\frmListLocalDrivingLicenseApplication.resx">
       <DependentUpon>frmListLocalDrivingLicenseApplication.cs</DependentUpon>
@@ -412,9 +415,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Tests\TestTypes\frmListTestTypes.resx">
       <DependentUpon>frmListTestTypes.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="New International License Application.resx">
-      <DependentUpon>New International License Application.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Applications\LocalDrivingLicense\frmAddEditLocalDrivingLicenseApplication.resx">
       <DependentUpon>frmAddEditLocalDrivingLicenseApplication.cs</DependentUpon>
