--- a/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
+++ b/DVLD_winForm/DVLD_WinForm_PresentationLayer/DVLD_WinForm_PresentationLayer.csproj
@@ -40,6 +40,7 @@
       <HintPath>..\..\..\Guna UI Framwork\Guna.UI2.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
     <Reference Include="System.Management" />
